--- a/comparaImagenes/src/app/app.component.html
+++ b/comparaImagenes/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-compara></app-compara>
+<app-compara-imagenes></app-compara-imagenes>
+
+<h2 style="text-align:center;">NG Tesseract OCR Component</h2>
+<h3 style="text-align:center;">Simple OCR Text</h3>
+
+<div style="margin:20px auto; width:800px; text-align: center;">
+  <app-tesseract
+    image="https://tesseract.projectnaptha.com/img/eng_bw.png"
+    lang="eng">
+  </app-tesseract>
+</div>
