Implementación Tesseract.js

--- a/comparaImagenes/src/app/app.component.html
+++ b/comparaImagenes/src/app/app.component.html
@@ -1,11 +1,12 @@
-<app-compara-imagenes></app-compara-imagenes>
-
-<h2 style="text-align:center;">NG Tesseract OCR Component</h2>
-<h3 style="text-align:center;">Simple OCR Text</h3>
-
-<div style="margin:20px auto; width:800px; text-align: center;">
-  <app-tesseract
-    image="https://tesseract.projectnaptha.com/img/eng_bw.png"
-    lang="eng">
-  </app-tesseract>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <app-compara-imagenes></app-compara-imagenes>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <app-tesseract></app-tesseract>
+    </div>
+  </div>
 </div>
