--- a/comparaImagenes/src/app/Components/compara-imagenes/compara-imagenes.component.html
+++ b/comparaImagenes/src/app/Components/compara-imagenes/compara-imagenes.component.html
@@ -1,7 +1,18 @@
-<h2>Comparación de Imágenes</h2>
-
-<input type="file" (change)="onFileSelected($event, 1)">
-<input type="file" (change)="onFileSelected($event, 2)">
-
-<button (click)="compareImages()">Comparar Imágenes</button>
-
+<div class="container">
+    <h2>Comparación de Imágenes</h2>
+  
+    <form>
+      <div class="form-group">
+        <label for="imageInput1">Seleccionar imagen 1:</label><br><br>
+        <input id="imageInput1" type="file" (change)="onFileSelected($event, 1)">
+      </div>
+  
+      <div class="form-group">
+        <label for="imageInput2">Seleccionar imagen 2:</label>
+        <input id="imageInput2" type="file" (change)="onFileSelected($event, 2)">
+      </div>
+  
+      <button class="btn btn-primary" (click)="compareImages()">Comparar Imágenes</button>
+    </form>
+  </div>
+  
