--- a/comparaImagenes/src/app/Components/tesseract/tesseract.component.html
+++ b/comparaImagenes/src/app/Components/tesseract/tesseract.component.html
@@ -1,1 +1,49 @@
-<p>{{text}}</p>
+<!-- <h2>Comparación de Imágenes</h2>
+
+<form>
+  <div class="form-group">
+    <input type="file" (change)="onFileSelected($event)">
+  </div>
+
+  <div class="form-group">
+    <label for="languageSelect">Idioma:</label>
+    <select id="languageSelect" class="form-control" [(ngModel)]="lang">
+      <option value="eng">Inglés</option>
+      <option value="spa">Español</option>
+    </select>
+  </div>
+
+  <button (click)="ocr()">Procesar Imagen</button>
+</form>
+
+<p *ngIf="text">Texto OCR:</p>
+<pre>{{ text }}</pre> -->
+
+<div class="container">
+    <h2>Comparación de Imágenes</h2>
+  
+    <form>
+      <div class="form-group">
+        <label for="imageInput">Seleccionar imagen:</label>
+        <input id="imageInput" type="file" (change)="onFileSelected($event)">
+      </div>
+  
+      <div class="form-group">
+        <label for="languageSelect">Idioma:</label>
+        <select id="languageSelect" class="form-control" [(ngModel)]="lang">
+          <option value="eng">Inglés</option>
+          <option value="spa">Español</option>
+        </select>
+      </div>
+  
+      <button class="btn btn-primary" (click)="ocr()">Procesar Imagen</button>
+    </form>
+  
+    <div *ngIf="text" class="mt-4">
+      <p class="mb-2">Texto OCR:</p>
+      <pre>{{ text }}</pre>
+    </div>
+  </div>
+  
+
+
