--- a/comparaImagenes/src/app/Components/compara-imagenes/compara-imagenes.component.css
+++ b/comparaImagenes/src/app/Components/compara-imagenes/compara-imagenes.component.css
@@ -1,11 +1,16 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    margin-top: 50px;
-  }
+.container{
+  padding: 20px;
+}
+
+  .card {
+    max-width: 100%;
+    width: 800px;
+    height: auto;
+    margin-top: 5%;
+    border-radius: 2%;
+    box-shadow: 1px 1px 1px grey;
+    background-image: linear-gradient(to bottom right, #b7c6d6c0, #a1b5cb09);
+}
 
   h2 {
     text-align: center;
@@ -18,9 +23,11 @@ body {
   }
 
   .form-group {
-    margin-bottom: 10px;
+    padding: 20px;
   }
 
   button {
+    margin-top: 10px;
     padding: 5px;
   }
+
