--- a/comparaImagenes/src/app/app.component.html
+++ b/comparaImagenes/src/app/app.component.html
@@ -1,12 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
+<div class="container text-center">
+  <h2>Introducción al Desarrollo de Software Libre: Proyecto Final</h2>
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-7">
       <app-compara-imagenes></app-compara-imagenes>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-7">
       <app-tesseract></app-tesseract>
     </div>
   </div>
 </div>
+
+
